--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ez Tiers Hub</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>EZ Tiers Leaderboards</title>
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>EZ Tiers - Gamemodes</h2>
-    <nav>
-      <a href="sword.html">Sword</a>
-      <a href="axe.html">Axe</a>
-      <a href="crystal.html">Crystal</a>
-      <a href="bedwars.html">Bedwars</a>
-      <a href="fireball.html">Fireball Fight</a>
-      <a href="nethpot.html">Nethpot</a>
-      <a href="diapot.html">Diapot</a>
-    </nav>
-    <p style="text-align:center; margin-top: 2rem;">
-      Select a gamemode above to view or edit the leaderboard.
-    </p>
-  </div>
+  <nav id="navbar">
+    <div class="container flex-between">
+      <a href="index.html" class="logo gradient-text">MC Tiers</a>
+      <ul class="nav-links">
+        <li><a href="sword.html" class="nav-link">Sword</a></li>
+        <li><a href="axe.html" class="nav-link">Axe</a></li>
+        <li><a href="crystal.html" class="nav-link">Crystal</a></li>
+        <li><a href="bedwars.html" class="nav-link">Bedwars</a></li>
+        <li><a href="fireball.html" class="nav-link">Fireball Fight</a></li>
+        <li><a href="nethpot.html" class="nav-link">Nethpot</a></li>
+        <li><a href="diapot.html" class="nav-link">Diapot</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <main class="container" style="margin-top: 100px; text-align: center;">
+    <h1 class="gradient-text">Welcome to EZ Tiers Leaderboards</h1>
+    <p>Choose a gamemode from the navigation above to view its leaderboard.</p>
+  </main>
 </body>
 </html>
