--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav id="navbar">
     <div class="container flex-between">
-      <a href="index.html" class="logo gradient-text">MC Tiers</a>
+      <a href="index.html" class="logo gradient-text">EZ Tiers</a>
       <ul class="nav-links">
         <li><a href="sword.html" class="nav-link">Sword</a></li>
         <li><a href="axe.html" class="nav-link">Axe</a></li>
