--- a/public/fireball.html
+++ b/public/fireball.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fireball Leaderboard - EZ Tiers</title>
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav id="navbar">
