--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minecraft Leaderboards</title>
+    <title>EZ Tiers</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Minecraft Leaderboards</h1>
+    <h1>EZ Tiers</h1>
     <div class="menu">
         <a href="sword.html">Sword</a>
         <a href="diapot.html">Diapot</a>
