--- a/diapot.html
+++ b/diapot.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="leaderboard.js" defer></script>
 </head>
-<body onload="loadLeaderboard('sword')">
+<body onload="loadLeaderboard('diapot')">
     <h2>Diapot Leaderboard</h2>
     <div class="leaderboard" id="leaderboard"></div>
 </body>
