--- a/axe.html
+++ b/axe.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="leaderboard.js" defer></script>
 </head>
-<body onload="loadLeaderboard('sword')">
+<body onload="loadLeaderboard('axe')">
     <h2>Axe Leaderboard - EZ Tiers</h2>
     <div class="leaderboard" id="leaderboard"></div>
 </body>
